// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MaintenanceTakeover Renders correct content when both start date and end date are provided 1`] = `
<Fragment>
  <div
    className="upcoming-maintenance-banner bg-yellow padding-1 text-center"
    role="alert"
  >
    <Trans
      components={
        Object {
          "end": "June 17, 2021, 10:00 AM EDT",
          "start": "June 15, 2021, 3:00 PM EDT",
        }
      }
      i18nKey="components.upcomingMaintenanceBanner.messageWithStartAndEnd"
    />
  </div>
</Fragment>
`;

exports[`MaintenanceTakeover Renders correct content when only end date is provided 1`] = `
<Fragment>
  <div
    className="upcoming-maintenance-banner bg-yellow padding-1 text-center"
    role="alert"
  >
    <Trans
      components={
        Object {
          "end": "June 17, 2021, 10:00 AM EDT",
          "start": "",
        }
      }
      i18nKey="components.upcomingMaintenanceBanner.messageWithEndAndNoStart"
    />
  </div>
</Fragment>
`;

exports[`MaintenanceTakeover Renders correct content when only start date is provided 1`] = `
<Fragment>
  <div
    className="upcoming-maintenance-banner bg-yellow padding-1 text-center"
    role="alert"
  >
    <Trans
      components={
        Object {
          "end": "",
          "start": "June 15, 2021, 3:00 PM EDT",
        }
      }
      i18nKey="components.upcomingMaintenanceBanner.messageWithStartAndNoEnd"
    />
  </div>
</Fragment>
`;

exports[`MaintenanceTakeover Renders correct content when start date and end date are not provided 1`] = `
<Fragment>
  <div
    className="upcoming-maintenance-banner bg-yellow padding-1 text-center"
    role="alert"
  >
    <Trans
      components={
        Object {
          "end": "",
          "start": "",
        }
      }
      i18nKey="components.upcomingMaintenanceBanner.messageWithNoStartAndNoEnd"
    />
  </div>
</Fragment>
`;
